--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "rollup-plugin-uglify": "^2.0.1",
     "shelljs": "^0.7.8",
     "style-loader": "^0.18.2",
+    "typescript": "^2.8.3",
     "uglify-es": "^3.1.3",
     "webpack": "^3.5.5"
   },
