Add turnato's index.d.ts

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react.js",
     "react-native.js",
     "core.js",
-    "ui.js"
+    "ui.js",
+    "index.d.ts"
   ],
   "keywords": [
     "react",
