--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         /* Basic Options */
         "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
         "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-        // "lib": [],                             /* Specify library files to be included in the compilation. */
+         "lib": [
+             "DOM", "ES5", "ScriptHost", // ES5 defaults
+             "ES2015.Collection" // Because server/db.js uses Map
+         ],                             /* Specify library files to be included in the compilation. */
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
         // TODO: create a separate tsconfig with JSX set to "react-native".
