--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@storybook/addon-knobs": "^3.3.10",
     "@storybook/addon-options": "^3.2.16",
     "@storybook/react": "^3.2.16",
+    "@types/lru-cache": "^4.1.0",
+    "@types/mongodb": "^3.0.15",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
