--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
     "mousetrap": "^1.6.1",
     "prop-types": "^15.5.10",
     "redux": "^3.7.2",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.1.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
