Permitted generic types in: client/react-native/Client, client/react-native/ClientInput, and client/core/Move, allowing removal of all errors for TypeScript RN example project

--- a/examples/RNTS/tsconfig.json
+++ b/examples/RNTS/tsconfig.json
@@ -1,6 +1,10 @@
 {
     "compilerOptions": {
         "target": "es2015",
+        "lib": [
+            "DOM", "ES5", "ScriptHost" // ES5 defaults
+//            "DOM.Iterable"
+        ],
         "module": "es2015",
         "jsx": "react-native",
         "baseUrl": ".",
