distribute typings on publish

--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "dist/boardgameio.js",
     "dist/boardgameio.min.js",
     "dist/boardgameio.es.js",
+    "dist/server.d.ts",
+    "dist/client.d.ts",
+    "dist/react.d.ts",
+    "dist/react-native.d.ts",
+    "dist/core.d.ts",
+    "dist/ui.d.ts",
     "dist/server.js",
     "dist/client.js",
     "dist/react.js",
