--- a/examples/RNTS/tsconfig.json
+++ b/examples/RNTS/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2015",
+        "allowJs": true,
         "lib": [
             "DOM", "ES5", "ScriptHost" // ES5 defaults
 //            "DOM.Iterable"
