--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
         "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
          "lib": [
              "DOM", "ES5", "ScriptHost", // ES5 defaults
-             "ES2015.Collection" // Because server/db.js uses Map
+             "ES2015.Iterable", // Because Game.tsx uses a for...of loop on an array
+//             "DOM", "ES6", "DOM.Iterable", "ScriptHost", // ES6 defaults
+             "ES2015.Collection" // Because server/db.d.ts uses Map and client/multipayer/multipayer.d.ts uses Set
          ],                             /* Specify library files to be included in the compilation. */
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
