--- a/examples/RNTS/tsconfig.json
+++ b/examples/RNTS/tsconfig.json
@@ -3,13 +3,24 @@
         "target": "es2015",
         "allowJs": true,
         "lib": [
-            "DOM", "ES5", "ScriptHost" // ES5 defaults
-//            "DOM.Iterable"
+            "DOM", "ES5", "ScriptHost", // ES5 defaults
+            "DOM.Iterable",
+            "ES2015.Collection" // Because server/db.d.ts uses Map and client/multipayer/multipayer.d.ts uses Set
         ],
         "module": "es2015",
         "jsx": "react-native",
         "baseUrl": ".",
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true
-    }
+        "allowSyntheticDefaultImports": true,
+        "typeRoots": [                            /* Type declaration files to be included in compilation. */
+            "node_modules/@types",
+            "@types",
+            "./@types"
+        ]
+    },
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts",
+        "../../index.d.ts"
+    ]
 }
